trunk/Archive2/34/8beda33c6b12f4/output
main.cpp: In function 'int main()':
main.cpp:14:9: error: assignment of read-only member 'T::y'
     a.y = 6;
         ^
main.cpp:15:9: error: assignment of read-only member 'T::z'
     a.z = 7;
         ^
